LBT-7003 rewrite CAG operations to reactive streams